--- a/styles.css
+++ b/styles.css
@@ -73,17 +73,29 @@ h2{
 }
 
 .info{
-	
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 50px;
 }
+
 h3{
 	text-align: center;
+	font-size: 36px;
+	color: #1F2937;
 }
 .info img{
 	background-color: gray;
-	height: 100;
-	width: 100;
+	height: 200px;
+	width: 200px;
+	border: 5px solid #1F2937;
+	border-radius: 10px;
+
 }
+.text{
+	max-width: 250px;
+}
+
 .quote{
 
 }
